[gd_scene load_steps=17 format=3 uid="uid://cgltqjf5he0rm"]

[ext_resource type="Script" path="res://scripts/session.gd" id="1_1pddt"]
[ext_resource type="FontFile" uid="uid://b7c8c5oithayr" path="res://resources/fonts/product_sans_bold.ttf" id="2_spoui"]
[ext_resource type="Texture2D" uid="uid://dnjgqvda0meok" path="res://assets/icons/players_small.svg" id="2_xfaa2"]
[ext_resource type="Texture2D" uid="uid://ieyk52a6wdua" path="res://assets/icons/new_small.svg" id="4_hwcgf"]
[ext_resource type="Texture2D" uid="uid://bplcma73efn10" path="res://assets/icons/return.svg" id="4_s5l7i"]
[ext_resource type="PackedScene" uid="uid://brj7b34jopmx8" path="res://scenes/card_list.tscn" id="5_qy684"]
[ext_resource type="PackedScene" uid="uid://3c6msb02l5p2" path="res://scenes/editor.tscn" id="6_b81r6"]
[ext_resource type="PackedScene" uid="uid://dyvn80hyih8aq" path="res://scenes/player_list.tscn" id="7_tj06u"]
[ext_resource type="FontFile" uid="uid://55xc72uprrn7" path="res://resources/fonts/product_sans_bold_oversampled.ttf" id="8_u7n64"]
[ext_resource type="Texture2D" uid="uid://bgqnoiiska8p3" path="res://assets/icons/new.svg" id="9_53l6x"]
[ext_resource type="Script" path="res://scripts/action_button.gd" id="10_bhbrk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_geier"]
content_margin_left = 15.0
content_margin_top = 16.0
content_margin_right = 15.0
content_margin_bottom = 16.0
bg_color = Color(0.15, 0.15, 0.15, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs6uk"]
content_margin_left = 15.0
content_margin_top = 16.0
content_margin_right = 15.0
content_margin_bottom = 16.0
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4a2ht"]
content_margin_left = 15.0
content_margin_top = 16.0
content_margin_right = 15.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ievq"]
content_margin_left = 15.0
content_margin_top = 16.0
content_margin_right = 15.0
content_margin_bottom = 16.0
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
corner_detail = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6r0x"]
content_margin_left = 15.0
content_margin_top = 16.0
content_margin_right = 15.0
content_margin_bottom = 16.0

[node name="Session" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pddt")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MenuBar" type="Control" parent="MainContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MenuBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayersButton" type="Button" parent="MainContainer/MenuBar/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "Players"
icon = ExtResource("2_xfaa2")

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MenuBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SessionLabel" type="Label" parent="MainContainer/MenuBar/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_spoui")
text = "Session"
horizontal_alignment = 1

[node name="SessionOption" type="OptionButton" parent="MainContainer/MenuBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("2_spoui")
flat = true
item_count = 2
fit_to_longest_item = false
popup/item_0/text = "Back to Sessions"
popup/item_0/icon = ExtResource("4_s5l7i")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer/MenuBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewButton" type="Button" parent="MainContainer/MenuBar/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "New"
icon = ExtResource("4_hwcgf")

[node name="CardList" parent="MainContainer" instance=ExtResource("5_qy684")]
layout_mode = 2
size_flags_vertical = 3

[node name="Editor" parent="MainContainer" instance=ExtResource("6_b81r6")]
clip_contents = true
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlayerList" parent="MainContainer" instance=ExtResource("7_tj06u")]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="NewButton" type="Button" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -144.0
offset_right = -24.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_u7n64")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_geier")
theme_override_styles/hover = SubResource("StyleBoxFlat_gs6uk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a2ht")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8ievq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t6r0x")
text = "New"
icon = ExtResource("9_53l6x")
alignment = 2
clip_text = true
expand_icon = true
script = ExtResource("10_bhbrk")
